--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,11 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Kumar+One+Outline" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
+    <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
     <title>Mongo-Scraper</title>
 </head>
 <body>
+    <header>
+        <p class = "logo">The New York Times Scraper</p>
+        <div class="saved">
+            <p>My saved articles: <span>0</span></p> 
+        </div>
+    </header>
+    <div class="container">
+
     {{{body}}}
+    </div>
 
     <script src="./js/logic.js"></script>
 </body>
