refine user experience

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,21 +11,22 @@
                             {{headline}}
                         </h2>
                     </a>
+                </div>
+                <i class="fas fa-bookmark"></i>
+                <div class="image">
                     <p class="summary">
                         {{summary}}
                     </p>
-                </div>
-                <div class="image">
                     <img src={{img}} alt={{id}}/>
                 </div>
-                <p>By: {{writer}}</p>
                 <p>{{storyDate}}</p>
             </div>
             {{/each}}
+            <i class="fas fa-compress"></i>
         </div>
     </div>
 
     <div id="savedArticles">
-        <p class="buttonText">Display Saved Articles</p>
+        <p class="buttonText1">Display Saved Articles</p>
     </div>
 </div>
