--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,21 +25,6 @@ header {
     float: left;
 }
 
-.saved {
-    float: right;
-    width: 200px;
-    height: 75px;
-    text-align: center;
-    font-size: 20px;
-    background: #6d7993
-}
-
-.saved p {
-    padding: 5px;
-    color: #fff;
-    font-weight: bold;
-}
-
 .container {
     margin: auto;
     width: 90%;
@@ -87,6 +72,24 @@ header {
     left: 660px;
 }
 
+#savedArticles::-webkit-scrollbar-track{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+#savedArticles::-webkit-scrollbar{
+    width: 12px;
+    height: 0px;
+	background-color: #F5F5F5;
+}
+
+#savedArticles::-webkit-scrollbar-thumb{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
+}
+
 .expandView{
     z-index: 2;
     animation: expand 1s ease-in-out forwards;
@@ -113,21 +116,23 @@ header {
     font-family: 'Quicksand', sans-serif;
 }
 
-.buttonText{
+.buttonText, .buttonText1{
     text-align: center;
     font-weight: bold;
 }
 
 .storyBox {
     border: 1px solid #000;
-    margin: 10px 0px;
+    margin: 15px 0px;
+    position: relative;
+    border-radius: 20px;
+    overflow: hidden;
 }
 
 .storyText{
-    display: inline-block;
-    width: 69%;
-    margin-left: 10px;
-    text-align: left;
+    text-align: left!important;
+    background: #6d7993;
+    padding: 1px 15px;
 }
 
 .storyText a, .summary{
@@ -137,16 +142,37 @@ header {
 
 .summary {
     font-size: 24px;
+    text-align: left;
+    display: inline-block;
+    width: 74%;
 }
 
 .image{
-    display: inline-block;
-    width: 28%;
-    text-align: center;
+    position: relative;
+    margin-top: -22px;
 }
 
 .image img {
-    transform: translateY(60px)
+    transform: translateY(30px);
+}
+
+.storyBox i {
+    position: absolute;
+    right: 10px;
+    font-size: 63px;
+    top: -5px;
+}
+
+.fa-compress {
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    font-size: 33px;
+    background: #96858F;
+    padding: 10px;
+    border-radius: 40px;
+    box-shadow: 2px 2px 15px;
+    z-index: 5;
 }
 
 .hidden{
