--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Kumar+One+Outline" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -16,9 +17,6 @@
 <body>
     <header>
         <p class = "logo">The New York Times Scraper</p>
-        <div class="saved">
-            <p>My saved articles: <span>0</span></p> 
-        </div>
     </header>
     <div class="container">
 
