added saved articles

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -28,5 +28,9 @@
 
     <div id="savedArticles">
         <p class="buttonText1">Display Saved Articles</p>
+        <div class = "allSavedArticles">
+
+        </div>
+        <i class="fas fa-compress hidden"></i>
     </div>
 </div>
