--- a/public/css/style.css
+++ b/public/css/style.css
@@ -104,7 +104,7 @@ header {
     }
     100% {
         left: -20px;
-        width: 100%;
+        width: 95%;
         height: 82vh;
         background: #fff
     }
@@ -119,6 +119,7 @@ header {
 .buttonText, .buttonText1{
     text-align: center;
     font-weight: bold;
+    cursor: pointer;
 }
 
 .storyBox {
@@ -166,14 +167,20 @@ header {
 
 .fa-compress {
     position: fixed;
-    right: 10px;
-    bottom: 10px;
+    right: 30px;
+    bottom: 30px;
     font-size: 33px;
-    background: #96858F;
-    padding: 10px;
-    border-radius: 40px;
-    box-shadow: 2px 2px 15px;
     z-index: 5;
+    animation: glow 3s infinite;
+}
+
+@keyframes glow {
+    0%, 100% {
+        filter : drop-shadow(0px 0px 0px #4444dd)
+    }
+    50% {
+        filter: drop-shadow(0px 0px 10px #4444dd)
+    }
 }
 
 .hidden{
