--- a/public/css/style.css
+++ b/public/css/style.css
@@ -126,8 +126,8 @@ header {
     border: 1px solid #000;
     margin: 15px 0px;
     position: relative;
-    border-radius: 20px;
     overflow: hidden;
+    box-shadow: 5px 5px 10px #555
 }
 
 .storyText{
@@ -157,7 +157,7 @@ header {
     transform: translateY(30px);
 }
 
-.storyBox i {
+.storyBox .fa-bookmark {
     position: absolute;
     right: 10px;
     font-size: 63px;
@@ -181,6 +181,34 @@ header {
     50% {
         filter: drop-shadow(0px 0px 10px #4444dd)
     }
+}
+
+.commentBox{
+    margin-top: 10px;
+    text-align: left;
+    padding: 0px 20px 0px;
+    background: #6d7993;
+    min-height: 70px;
+}
+
+.comment {
+    width: 95%;
+    float: left;
+}
+.controls {
+    float: right;
+    margin-top: 9px
+}
+
+.fa-times {
+    position: absolute;
+    right: 8px;
+    top: 8px;
+}
+
+textarea {
+    width: 100%;
+    height: 50px;
 }
 
 .hidden{
