--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,6 +19,7 @@
                     </p>
                     <img src={{img}} alt={{id}}/>
                 </div>
+                <p>{{author}}</p>
                 <p>{{storyDate}}</p>
             </div>
             {{/each}}
